@@ -18,6 +18,8 @@ twitter_extra_hash_tags = #distzilla
 bumpversions      = 1
 copyfiles         = LICENSE
 srcreadme         = mkdn
+Test::Compile::PerFile.:version = 0.003902
+Test::Compile::PerFile.test_template = 02-raw-require.t.tpl
 
 ; auto_prereqs_skip = File::Find
 
