@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002003
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.002002 2014-12-25T12:35:22Z
  [Added / configure requires]
@@ -36,4 +38,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 
  [Changed / test requires]
  - version 0 → 0.77
-
